Fix responsive issues on overflow

--- a/public/styles/cv-en.css
+++ b/public/styles/cv-en.css
@@ -351,5 +351,10 @@ MAIN CONTENT
 
     .sidebar {
         width: 30%;
+        height: unset;
+    }
+
+    .main-content {
+        height: unset;
     }
 }
